--- a/index.html
+++ b/index.html
@@ -4,17 +4,36 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ohmyfood</title>
-    <link href="scss/style.css" type="text/css" rel="stylesheet">
+    <title>Home - ohmyfood!</title>
+    <meta name="title" contant="Home - ohmyfood!">
+    <meta name="description" content="Ohmyfood is an online food ordering company. Our concept allows users to compose their own menu and reduce waiting time in restaurants because they make their choice in advance. No more wasting time consulting the menu!
+    ">
+    <link href="sass/homepage.css" type="text/css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/908c85c337.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Shrikhand">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:bold%7CRoboto:light%7CRoboto:Regular%7CRoboto:Medium">   
 </head>
 <body>
-    <header class="transform">
+    <div class="progress-container">
+        <div class="progress">
+             <div class="progress__bar"></div>
+             <div class="loader">
+                <span>o</span>
+                <span>h</span>
+                <span>m</span>
+                <span>y</span>
+                <span>f</span>
+                <span>o</span>
+                <span>o</span>
+                <span>d</span>
+                <span>!</span>
+            </div>
+        </div>
+    </div>
+    <header class="header">
         <h1 class="header__logo">ohmyfood</h1>
     </header>
-    <main>
+    <main class="container">
         <section class="adress">
             <i class="fa-map-marker-alt fas adress__icon"></i>
             <span class="adress__text">Paris, Belleville</span>
@@ -22,98 +41,100 @@
         <section class="hero">
             <h2 class="hero__title">Book the menu you like</h2>
             <p class="hero__subtitle">Discover top-of-the-art restaurants we picked for you</p>
-            <a class="hero__btn">Explore our restaurants</a>
+            <a class="btn_cta">Explore our restaurants</a>
         </section>
         <section class="instructions">
-            <div class="container">
-                <h2 class="instructions__title">How it works</h2>
-                <div class="container__chose">
-                    <div class="container__number">
-                        <span class="number__one">1</span>
-                    </div>
-                    <div class="container__icon">
-                        <p><i class="fas fa-mobile-alt" aria-hidden="true"></i></p>
-                        <p class="container__text">Chose a restaurant</p>
-                    </div>
+            <h2 class="instructions__title">How it works</h2>
+            <a class="instructions__chose" href="#">
+                <div class="instructions__number">
+                    <span class="number__one">1</span>
                 </div>
-                <div class="container__chose">
-                    <div class="container__number">
-                        <span class="number__two">2</span>
-                    </div>
-                    <div class="container__icon">
-                        <p><i class="fas fa-list-ul" aria-hidden="true"></i></p>
-                        <p class="container__text">Create your menu</p>
-                    </div>
+                <div class="instructions__icon">
+                    <p><i class="fas fa-mobile-alt instructions__fas" aria-hidden="true"></i></p>
+                    <p class="instructions__text">Chose a restaurant</p>
                 </div>
-                <div class="container__chose">
-                    <div class="container__number">
-                        <span class="number__three">3</span>
-                    </div>
-                    <div class="container__icon">
-                        <p><i class="fas fa-store i--one" aria-hidden="true"></i></p>
-                        <p class="container__text">Go enjoy it at the restaurant</p>
-                    </div>
+            </a>
+            <a class="instructions__chose" href="#">
+                <div class="instructions__number">
+                    <span class="number__two">2</span>
                 </div>
-            </div>
+                <div class="instructions__icon">
+                    <p><i class="fas fa-list-ul instructions__fas" aria-hidden="true"></i></p>
+                    <p class="instructions__text">Create your menu</p>
+                </div>
+            </a>
+            <a class="instructions__chose" href="#">
+                <div class="instructions__number">
+                    <span class="number__three">3</span>
+                </div>
+                <div class="instructions__icon">
+                    <p><i class="fas fa-store i--one instructions__fas" aria-hidden="true"></i></p>
+                    <p class="instructions__text">Go enjoy it at the restaurant</p>
+                </div>
+            </a>
         </section>
         <section class="restaurants">
-            <div class="box">
+            <div class="restaurants__box">
                 <h2 class="restaurants__title">Restaurants</h2>
-                <div class="wrappers">
-                    <div class="wrapper">
-                    <a href="#" class="">
-                        <figure class="figure__menu">
-                            <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat">
-                            <p class="new">New</p>
-                            <figcaption class="figcaption__menu">
-                                <div class="figcaption__title">
+                <div class="restaurants__cards">
+                    <div class="restaurants__card">
+                    <a href="/menu_full_palette.html" class="">
+                        <figure class="restaurants__menu">
+                            <div class="restaurants__new">
+                                <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat">
+                                <p class="restaurants__badge">New</p>
+                            </div>
+                            <figcaption class="menu">
+                                <div class="menu__title">
                                     <p class="menu__name">The Full Palette</p>
                                     <p class="menu__city">New York</p>
                                 </div>
-                                <i class="far fa-heart" aria-hidden="true"></i>
+                                <i class="fas fa-heart menu__like" aria-hidden="true"></i>
                             </figcaption>
                         </figure>
                     </a>
                 </div>
-                    <div class="wrapper">
+                    <div class="restaurants__card">
                     <a href="#" class="">
-                        <figure class="figure__menu">
-                            <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat">
-                            <p class="new">New</p>
-                            <figcaption class="figcaption__menu">
-                                <div class="figcaption__title">
+                        <figure class="restaurants__menu">
+                            <div class="restaurants__new">
+                                <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat">
+                                <p class="restaurants__badge">New</p>
+                            </div>
+                            <figcaption class="menu">
+                                <div class="menu__title">
                                     <p class="menu__name">The Enchanted Plate</p>
                                     <p class="menu__city">New York</p>
                                 </div>
-                                <i class="far fa-heart" aria-hidden="true"></i>
+                                <i class="fas fa-heart menu__like" aria-hidden="true"></i>
                             </figcaption>
                         </figure>
                     </a>
                 </div>
-                    <div class="wrapper">
+                    <div class="restaurants__card">
                     <a href="#" class="">
-                        <figure class="figure__menu">
+                        <figure class="restaurants__menu">
                             <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat">
-                            <figcaption class="figcaption__menu">
-                                <div class="figcaption__title">
+                            <figcaption class="menu">
+                                <div class="menu__title">
                                     <p class="menu__name">Bastille</p>
                                     <p class="menu__city">New York</p>
                                 </div>
-                                <i class="far fa-heart" aria-hidden="true"></i>
+                                <i class="fas fa-heart menu__like" aria-hidden="true"></i>
                             </figcaption>
                         </figure>
                     </a>
                 </div>
-                    <div class="wrapper">
+                    <div class="restaurants__card">
                     <a href="#" class="">
-                        <figure class="figure__menu">
+                        <figure class="restaurants__menu">
                             <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat">
-                            <figcaption class="figcaption__menu">
-                                <div class="figcaption__title">
+                            <figcaption class="menu">
+                                <div class="menu__title">
                                     <p class="menu__name">Le Gourmand</p>
                                     <p class="menu__city">New York</p>
                                 </div>
-                                <i class="far fa-heart" aria-hidden="true"></i>
+                                <i class="fas fa-heart menu__like" aria-hidden="true"></i>
                             </figcaption>
                         </figure>
                     </a>
@@ -123,7 +144,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div id="containerFooter">
+        <div class="container">
             <p class="footer__title">ohmyfood</p>
             <ul class="footer__text">
                 <li class="footer__list">
