--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="progress-container">
         <div class="progress">
              <div class="progress__bar"></div>
-             <div class="loader">
+             <div class="load">
                 <span>o</span>
                 <span>h</span>
                 <span>m</span>
