--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="restaurants__cards">
                     <div class="restaurants__card">
-                    <a href="/menu_full_palette.html" class="">
+                    <a href="menu_full_palette.html" class="">
                         <figure class="restaurants__menu">
                             <div class="restaurants__new">
                                 <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat">
