--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="header">
         <h1 class="header__logo">ohmyfood</h1>
     </header>
-    <main class="container">
+    <main>
         <section class="adress">
             <i class="fa-map-marker-alt fas adress__icon"></i>
             <span class="adress__text">Paris, Belleville</span>
@@ -43,7 +43,7 @@
             <p class="hero__subtitle">Discover top-of-the-art restaurants we picked for you</p>
             <a class="btn_cta">Explore our restaurants</a>
         </section>
-        <section class="instructions">
+        <section class="instructions container">
             <h2 class="instructions__title">How it works</h2>
             <a class="instructions__chose" href="#">
                 <div class="instructions__number">
@@ -73,7 +73,7 @@
                 </div>
             </a>
         </section>
-        <section class="restaurants">
+        <section class="restaurants container">
             <div class="restaurants__box">
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="restaurants__cards">
