changes after mentoring

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <meta name="title" contant="Home - ohmyfood!">
     <meta name="description" content="Ohmyfood is an online food ordering company. Our concept allows users to compose their own menu and reduce waiting time in restaurants because they make their choice in advance. No more wasting time consulting the menu!
     ">
-    <link href="sass/homepage.css" type="text/css" rel="stylesheet">
+    <link href="images/ohmyfood@2x.svg" type="image/x-icon" rel="shortcut icon">
     <script src="https://kit.fontawesome.com/908c85c337.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Shrikhand">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:bold%7CRoboto:light%7CRoboto:Regular%7CRoboto:Medium">   
+    <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div class="progress-container">
@@ -89,13 +90,16 @@
                                     <p class="menu__name">The Full Palette</p>
                                     <p class="menu__city">New York</p>
                                 </div>
-                                <i class="fas fa-heart menu__like" aria-hidden="true"></i>
+                                <button class="heart menu__btn">
+                                    <i class="far fa-heart menu__like menu__like--bnw" aria-hidden="true"></i>
+                                    <i class="fas fa-heart menu__like menu__like--color" aria-hidden="true"></i>
+                                </button>
                             </figcaption>
                         </figure>
                     </a>
                 </div>
                     <div class="restaurants__card">
-                    <a href="#" class="">
+                    <a href="menu_enchanted_plate.html" class="">
                         <figure class="restaurants__menu">
                             <div class="restaurants__new">
                                 <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat">
@@ -106,13 +110,16 @@
                                     <p class="menu__name">The Enchanted Plate</p>
                                     <p class="menu__city">New York</p>
                                 </div>
-                                <i class="fas fa-heart menu__like" aria-hidden="true"></i>
+                                <button class="heart menu__btn">
+                                    <i class="far fa-heart menu__like menu__like--bnw" aria-hidden="true"></i>
+                                    <i class="fas fa-heart menu__like menu__like--color" aria-hidden="true"></i>
+                                </button>
                             </figcaption>
                         </figure>
                     </a>
                 </div>
                     <div class="restaurants__card">
-                    <a href="#" class="">
+                    <a href="menu_bastille.html" class="">
                         <figure class="restaurants__menu">
                             <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat">
                             <figcaption class="menu">
@@ -120,13 +127,16 @@
                                     <p class="menu__name">Bastille</p>
                                     <p class="menu__city">New York</p>
                                 </div>
-                                <i class="fas fa-heart menu__like" aria-hidden="true"></i>
+                                <button class="heart menu__btn">
+                                    <i class="far fa-heart menu__like menu__like--bnw" aria-hidden="true"></i>
+                                    <i class="fas fa-heart menu__like menu__like--color" aria-hidden="true"></i>
+                                </button>
                             </figcaption>
                         </figure>
                     </a>
                 </div>
                     <div class="restaurants__card">
-                    <a href="#" class="">
+                    <a href="menu_gourmand.html" class="">
                         <figure class="restaurants__menu">
                             <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat">
                             <figcaption class="menu">
@@ -134,7 +144,10 @@
                                     <p class="menu__name">Le Gourmand</p>
                                     <p class="menu__city">New York</p>
                                 </div>
-                                <i class="fas fa-heart menu__like" aria-hidden="true"></i>
+                                <button class="heart menu__btn">
+                                    <i class="far fa-heart menu__like menu__like--bnw" aria-hidden="true"></i>
+                                    <i class="fas fa-heart menu__like menu__like--color" aria-hidden="true"></i>
+                                </button>
                             </figcaption>
                         </figure>
                     </a>
