--- a/menu_full_palette.html
+++ b/menu_full_palette.html
@@ -8,14 +8,15 @@
     <meta name="title" contant="Home - ohmyfood!">
     <meta name="description" content="Ohmyfood is an online food ordering company. Our concept allows users to compose their own menu and reduce waiting time in restaurants because they make their choice in advance. No more wasting time consulting the menu!
     ">
-    <link href="sass/menupages.css" type="text/css" rel="stylesheet">
+    <link href="images/ohmyfood@2x.svg" type="image/x-icon" rel="shortcut icon">
     <script src="https://kit.fontawesome.com/908c85c337.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Shrikhand">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:bold%7CRoboto:light%7CRoboto:Regular%7CRoboto:Medium">   
+    <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="header__withArrow">
+    <header class="header-withArrow">
+        <div class="headerContainer">
             <a href="index.html">
                 <i class="fas fa-arrow-left header__arrow" aria-hidden="true"></i>
             </a>
@@ -23,10 +24,13 @@
         </div>
     </header>
     <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat" class="heroImg">
-    <main class="container menu">
-        <header class="menu__header">
-            <h2 class="menu__title">The Full Palette</h2>
-            <i class="fas fa-heart menu__like" aria-hidden="true"></i>
+    <main class="plat">
+        <header class="plat__header">
+            <h2 class="plat__title">The Full Palette</h2>
+            <button class="heart menu__btn">
+                <i class="far fa-heart menu__like menu__like--bnw" aria-hidden="true"></i>
+                <i class="fas fa-heart menu__like menu__like--color" aria-hidden="true"></i>
+            </button>
         </header>
         <section class="submenus">
             <div class="submenu">
