--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Home - ohmyfood!</title>
-    <meta name="title" contant="Home - ohmyfood!">
+    <meta name="title" content="Home - ohmyfood!">
     <meta name="description" content="Ohmyfood is an online food ordering company. Our concept allows users to compose their own menu and reduce waiting time in restaurants because they make their choice in advance. No more wasting time consulting the menu!
     ">
     <link href="images/ohmyfood@2x.svg" type="image/x-icon" rel="shortcut icon">
@@ -37,7 +37,7 @@
     <main>
         <section class="adress">
             <i class="fa-map-marker-alt fas adress__icon"></i>
-            <span class="adress__text">Paris, Belleville</span>
+            <h3 class="adress__text">Paris, Belleville</h3>
         </section>
         <section class="hero">
             <h2 class="hero__title">Book the menu you like</h2>
@@ -90,10 +90,10 @@
                                     <p class="menu__name">The Full Palette</p>
                                     <p class="menu__city">New York</p>
                                 </div>
-                                <button class="heart menu__btn">
+                                <div class="heart menu__btn">
                                     <i class="far fa-heart menu__like menu__like--bnw" aria-hidden="true"></i>
                                     <i class="fas fa-heart menu__like menu__like--color" aria-hidden="true"></i>
-                                </button>
+                                </div>
                             </figcaption>
                         </figure>
                     </a>
@@ -110,10 +110,10 @@
                                     <p class="menu__name">The Enchanted Plate</p>
                                     <p class="menu__city">New York</p>
                                 </div>
-                                <button class="heart menu__btn">
+                                <div class="heart menu__btn">
                                     <i class="far fa-heart menu__like menu__like--bnw" aria-hidden="true"></i>
                                     <i class="fas fa-heart menu__like menu__like--color" aria-hidden="true"></i>
-                                </button>
+                                </div>
                             </figcaption>
                         </figure>
                     </a>
@@ -127,10 +127,10 @@
                                     <p class="menu__name">Bastille</p>
                                     <p class="menu__city">New York</p>
                                 </div>
-                                <button class="heart menu__btn">
+                                <div class="heart menu__btn">
                                     <i class="far fa-heart menu__like menu__like--bnw" aria-hidden="true"></i>
                                     <i class="fas fa-heart menu__like menu__like--color" aria-hidden="true"></i>
-                                </button>
+                                </div>
                             </figcaption>
                         </figure>
                     </a>
@@ -144,10 +144,10 @@
                                     <p class="menu__name">Le Gourmand</p>
                                     <p class="menu__city">New York</p>
                                 </div>
-                                <button class="heart menu__btn">
+                                <div class="heart menu__btn">
                                     <i class="far fa-heart menu__like menu__like--bnw" aria-hidden="true"></i>
                                     <i class="fas fa-heart menu__like menu__like--color" aria-hidden="true"></i>
-                                </button>
+                                </div>
                             </figcaption>
                         </figure>
                     </a>
@@ -162,12 +162,12 @@
             <ul class="footer__text">
                 <li class="footer__list">
                     <a class="footer__link" href="#">
-                        <i class="fa-utensils fas footer__icon" arua-hidden="true"></i>Suggest a restaurant
+                        <i class="fa-utensils fas footer__icon" aria-hidden="true"></i>Suggest a restaurant
                     </a>
                 </li>
                 <li class="footer__list">
                     <a class="footer__link" href="#">
-                        <i class="fa-hands-helping fas footer__icon" arua-hidden="true"></i>Become a partner
+                        <i class="fa-hands-helping fas footer__icon" aria-hidden="true"></i>Become a partner
                     </a>
                 </li>
                 <li class="footer__list">
