--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <header class="header">
         <h1 class="header__logo">ohmyfood</h1>
     </header>
-    <main>
-        <section class="adress">
+    <main container>
+        <div class="adress">
             <i class="fa-map-marker-alt fas adress__icon"></i>
-            <h3 class="adress__text">Paris, Belleville</h3>
-        </section>
+            <span class="adress__text">Paris, Belleville</span>
+        </div>
         <section class="hero">
             <h2 class="hero__title">Book the menu you like</h2>
             <p class="hero__subtitle">Discover top-of-the-art restaurants we picked for you</p>
