--- a/menu_gourmand.html
+++ b/menu_gourmand.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Home - ohmyfood!</title>
-    <meta name="title" contant="Home - ohmyfood!">
+    <meta name="title" content="Home - ohmyfood!">
     <meta name="description" content="Ohmyfood is an online food ordering company. Our concept allows users to compose their own menu and reduce waiting time in restaurants because they make their choice in advance. No more wasting time consulting the menu!
     ">
     <link href="images/ohmyfood@2x.svg" type="image/x-icon" rel="shortcut icon">
@@ -163,12 +163,12 @@
             <ul class="footer__text">
                 <li class="footer__list">
                     <a class="footer__link" href="#">
-                        <i class="fa-utensils fas footer__icon" arua-hidden="true"></i>Suggest a restaurant
+                        <i class="fa-utensils fas footer__icon" aria-hidden="true"></i>Suggest a restaurant
                     </a>
                 </li>
                 <li class="footer__list">
                     <a class="footer__link" href="#">
-                        <i class="fa-hands-helping fas footer__icon" arua-hidden="true"></i>Become a partner
+                        <i class="fa-hands-helping fas footer__icon" aria-hidden="true"></i>Become a partner
                     </a>
                 </li>
                 <li class="footer__list">
