--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header class="header">
         <h1 class="header__logo">ohmyfood</h1>
     </header>
-    <main container>
+    <main>
         <div class="adress">
             <i class="fa-map-marker-alt fas adress__icon"></i>
             <span class="adress__text">Paris, Belleville</span>
